--- a/index.qmd
+++ b/index.qmd
@@ -26,4 +26,8 @@ Below you will find my resume!
 
 # Article written by me:
 
-This [link](https://c12f7668939749288ee3ac66a09a3506.app.posit.cloud/p/1f435268/) will take you to the exam I wrote for my Nationalism class in my Fall semester of my junior year of college!
+This [link](https://laurenprentice.github.io/mywebsiteprentice/personal%20essay.html) will take you to the exam I wrote for my Nationalism class in my Fall semester of my junior year of college!
+
+# News Article: 
+
+Linked is a news article about the issues students were having with the vexes on campus during Covid-19
