--- a/index.qmd
+++ b/index.qmd
@@ -6,6 +6,8 @@ editor: visual
 
 # Hello!
 
+My name is Lauren Prentice. I'm a senior at GW. I study Political Science with a minor in Journalism and Mass Communication.
+
 Welcome to my webpage. Below you will find numerous links to different sources. These include:
 
 1.  My resume
