--- a/index.qmd
+++ b/index.qmd
@@ -6,6 +6,8 @@ editor: visual
 
 # Hello!
 
+![](Screen Shot 2023-12-14 at 11.14.57 AM.png)
+
 My name is Lauren Prentice. I'm a senior at GW. I study Political Science with a minor in Journalism and Mass Communication.
 
 Welcome to my webpage. Below you will find numerous links to different sources. These include:
