--- a/index.qmd
+++ b/index.qmd
@@ -6,7 +6,7 @@ editor: visual
 
 # Hello!
 
-![](Screen Shot 2023-12-14 at 11.14.57 AM.png)
+![](Screen%20Shot%202023-12-14%20at%2011.14.57%20AM.png)
 
 My name is Lauren Prentice. I'm a senior at GW. I study Political Science with a minor in Journalism and Mass Communication.
 
