--- a/index.qmd
+++ b/index.qmd
@@ -6,7 +6,7 @@ editor: visual
 
 # Hello!
 
-![](Screen Shot 2023-12-14 at 11.14.57 AM.png)
+![](Screen%20Shot%202023-12-14%20at%2011.14.57%20AM.png)
 
 My name is Lauren Prentice. I'm a senior at GW. I study Political Science with a minor in Journalism and Mass Communication.
 
@@ -36,9 +36,9 @@ Here are the steps I took in order to find the data below:
 
 1.  The first step was to upload the census key so that all the data would be in PositCloud for me to pull from
 2.  I then has to upload the median ages, income and population for the US so that the data would be properly uploaded
-3.  I then pulled these different variables for Florida since that was my chosen state![](Screen Shot 2023-12-13 at 5.12.36 PM.png)
+3.  I then pulled these different variables for Florida since that was my chosen state![](Screen%20Shot%202023-12-13%20at%205.12.36%20PM.png)
 
-![](Screen Shot 2023-12-13 at 5.10.56 PM.png)
+![](Screen%20Shot%202023-12-13%20at%205.10.56%20PM.png)
 
 # Article written by me:
 
