--- a/index.qmd
+++ b/index.qmd
@@ -24,11 +24,9 @@ Welcome to my webpage. Below you will find numerous links to different sources. 
 
 4.  A news article I have written
 
-# ^Resume:^
+# ^Resume:^ 
 
-Below you will find my resume!
-
-![](Screen%20Shot%202023-12-05%20at%207.48.50%20PM.png)
+Here is my [resume](https://laurenprentice.github.io/mywebsiteprentice/resume.html)
 
 # Florida County Census Analysis and Map:
 
