--- a/personal essay.qmd
+++ b/personal essay.qmd
@@ -8,7 +8,9 @@ editor: visual
 
 ## Nationalism Final Exam
 
-The Battle of Algiers is a movie that shows actions taken by rebel forces in Algiera to fight off French colonialism in North Africa. Throughout the film, different themes appear, such as community, equality and increased warfare. These themes relate to several theories we have discussed throughout the year. Anderson Benedict's theories help explain the Algerians' imagined communities, Adria Lawrence explains how nationalism is created from a fight for equality, Barry Posen discusses how one must imitate warfare so their nation does not perish and the idea of ranked and unranked systems. 
+Summary: This paper is about the movie the Battle of Algiers. I had to watch the full movie and then relate key parts of the movie back to the concepts we had discussed in class throughout the year.
+
+The Battle of Algiers is a movie that shows actions taken by rebel forces in Algiers to fight off French colonialism in North Africa. Throughout the film, different themes appear, such as community, equality and increased warfare. These themes relate to several theories we have discussed throughout the year. Anderson Benedict's theories help explain the Algerians' imagined communities, Adria Lawrence explains how nationalism is created from a fight for equality, Barry Posen discusses how one must imitate warfare so their nation does not perish and the idea of ranked and unranked systems. 
 
 One major theme present is the idea of a community. This relates to Benedict Anderson's ideas on an imagined community and how that builds nationalism. One example he provides when explaining this theory is the idea of a religious pilgrimage. He says that although people didn't speak the same language, were illiterate or didn't see the land they were traveling to as sacred, what brought them together was their religion and, "Journey between times, statuses, and places, as a meaning-creating experience." We see in the film that not everyone is literate when Ali asks the young boy to read him a note. The Algerian people are connected by their religion yet they are also connected by the shared experience they have. For the past 130 years, as claimed by one of the liberation leaders in the movie, they have been oppressed and ruled by the French. This shared experience brings them together and causes them to become nationalistic toward their imagined community. Prisoners chant to each other, "Long live Algeria," and broadcasters claim to the public that they must fight for the independence of their nation. You can also see their connection to their community during the end of the movie, when there is a large protest. They begin waving sheets and blankets as flags, but they don't care what the flag looks like, they are purely waving it to show their allegiance to their nation. This relates to the course because before I would have assumed that they were a part of this movement purely because they were Algerian. I wouldn't have been able to recognize the connection they have with one another based on history and religion. Now with my knowledge of Benedict's theories, I can recognize the imagined community that the Algerian people have created. 
 
